--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,12 +1,16 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
+    id 'jacoco'
     id 'org.springframework.boot' version '3.0.6' apply false
-//    id 'org.springframework.boot' version '3.0.6' apply false
 }
+
+version = '1.0.0'
+group = 'com.github.lehadnk'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 sourceSets {
@@ -20,17 +24,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:3.0.5'
     implementation 'software.amazon.awssdk:s3:2.18.41'
 
-//    inttestImplementation 'org.springframework.boot:spring-boot-starter-test'
-
     intTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
     intTestImplementation 'org.testcontainers:localstack:1.17.6'
     intTestRuntimeOnly 'com.amazonaws:aws-java-sdk-s3:1.12.367'
     intTestImplementation 'org.assertj:assertj-core:3.24.2'
     intTestImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.5'
     intTestRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-
-//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 configurations {
@@ -41,5 +40,41 @@ configurations {
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(20)
+    }
+    withSourcesJar()
+}
+
+jar {
+    enabled = true
+}
+
+jacocoTestReport {
+    dependsOn intTest
+}
+
+jacoco {
+    toolVersion = "0.8.9"
+}
+
+intTest {
+    finalizedBy jacocoTestReport
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication){
+            artifactId = 'spring-s3'
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/lehadnk/spring-s3"
+            credentials {
+                username = System.getenv("GITHUB_USERNAME")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
     }
 }
